src/test/resources/projects/acceptance/native-library/src/main/java/com/acme/Text.java
package com.acme;

public final class Text {
    private Text() {
    }

    public static String greet(final String name) {
        return "Hi " + name;
    }
}
