src/test/resources/projects/negative/unsupported-nano-http-server-dependency/src/main/java/org/nanonative/nano/services/http/HttpServer.java
package org.nanonative.nano.services.http;

public final class HttpServer {
    private HttpServer() {
    }

    public static com.sun.net.httpserver.HttpServer create() throws java.io.IOException {
        return com.sun.net.httpserver.HttpServer.create(null, 0);
    }
}
